--- a/skin/win7/win7.css
+++ b/skin/win7/win7.css
@@ -10,6 +10,7 @@
 
 .tabbrowser-tab {
     -moz-box-pack: start;
+    -moz-box-flex: 0;
     -moz-appearance: none !important;
     background: transparent !important;
     border: 1px solid transparent !important;
